feat: Add main application container structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main class="library">
+        <!-- Header section with search and actions -->
+        <section class="library__controls">
+            <!-- Search and actions will be added later -->
+        </section>
     
+        <!-- Book listing section -->
+        <section class="library__content">
+            <ul class="book-list" aria-label="Book collection">
+                <!-- Book items will be added dynamically -->
+            </ul>
+        </section>
+    </main>
     <!-- Javascript files -->
     <script src="./script.js"></script>
 </body>
