feat: Add action buttons for library management
Implement action buttons section with:
- Container for potential future action buttons
- Add book button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
                     aria-label="Search books"
                 >
             </div>
+
+            <!-- Action Buttons -->
+            <div class="library__actions">
+                <button 
+                    id="add-book-btn"
+                    class="library__add-button"
+                    aria-label="Add new book"
+                >
+                    Add New Book
+                </button>
+            </div>
         </section>
     
         <!-- Book listing section -->
