feat: Add form action buttons for dialog
Implement form action buttons with:
- Clear button to reset form fields
- Submit button to register new book
- Proper class names for styling
- Data attributes for JavaScript functionality

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
                 <input type="checkbox" id="book-read" class="form-field__checkbox" required>
                 <label for="book-read" class="form-field__label">I have read this book</label>
             </div>
+
+            <div class="book-dialog__actions">
+                <button type="button" id="clear-dialog-btn" class="book-dialog__button book-dialog--button--primary" data-action="clear">
+                    Clear
+                </button>
+                <button type="submit" id="register-book-btn" class="book-dialog__button book-dialog__button--secondary">
+                    Register Book
+                </button>
+            </div>
         </form>
     </dialog>
 
