feat: Add basic Website components header & footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Application Header -->
+    <header class="app-header">
+        <h1 class="app-title">Online Library</h1>
+    </header>
+
+    <!-- Hero Section -->
+    <div class="app-hero">
+        <h2 class="app-hero__title">BOOKS</h2>
+    </div>
+
     <main class="library">
         <!-- Header section with search and actions -->
         <section class="library__controls">
@@ -48,6 +58,17 @@
             </ul>
         </section>
     </main>
+
+    <!-- Application Footer -->
+    <footer class="app-footer">
+        <p class="app-footer__copyright">
+            Copyright ©
+            <a href="https://github.com/ozenselin" class="github-link">
+                <img class="github-logo" src="github-logo.png" alt="Github Logo" width="16" height="16">
+                @ozenselin
+            </a>
+        </p>
+    </footer>
 
     <!-- Add book dialog-->
     <dialog id="add-book-dialog" class="book-dialog" aria-labelledby="dialog-title">
